# fntsub

./: CMakeLists.txt  README.MD
src/fntsub/: main.cc
src/sfntly/table/: table.cc
src/sfntly/table/core/: horizontal_metrics_table.cc  post_script_table.cc  post_script_table.h
src/sfntly/table/truetype/: loca_table.cc
src/subtly/: font_assembler.cc  font_assembler.h  font_info.cc  font_info.h  subsetter.cc  subsetter.h  utils.cc
